fix: 🐛 remove scroll bar on IE edge

--- a/src/templates/WidgetPage/index.css
+++ b/src/templates/WidgetPage/index.css
@@ -1,3 +1,7 @@
+html {
+    overflow: auto !important;
+}
+
 #gatsby-focus-wrapper {
     width: 100%;
     height: 100%;
